# ergo_avltree_rust

./: Cargo.toml
src/: authenticated_tree_ops.rs  batch_avl_prover.rs  batch_avl_verifier.rs  batch_node.rs  lib.rs  persistent_batch_avl_prover.rs  versioned_avl_storage.rs
tests/: avl_batch_specification.rs
tests/common/: mod.rs
