[package]
name = "ergo_avltree_rust"
version = "0.1.0"
authors = ["Konstantin Knizhnik <knizhnik@garret.ru>", "Ross Weir"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation of cryptographically authenticated dictionary based on AVL tree"
documentation = "https://eprint.iacr.org/2016/994"
repository = "https://github.com/ergoplatform/ergo_avltree_rust.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.0.1" }
rand = "0.8.3"
blake2 = "0.9"
anyhow = "1.0"
byteorder = "1.4.3"
base16 = "0.2.1"
debug-cell = "0.1.1"
sha2 = "0.9.8"
